--- a/library.bib
+++ b/library.bib
@@ -20,6 +20,24 @@ isbn="978-3-662-46706-0"
     year = 2005,
 }
 
+@misc{10-7-erasure-code,
+    author = {Emin Gabrielyan},
+    title = {Erasure resilient (10,7) code},
+    url = {https://docs.switzernet.com/people/emin-gabrielyan/051102-erasure-10-7-resilient/},
+    note = {Accessed: 2020-11-26},
+    year = 2005,
+}
+
+@misc{9-5-erasure-code,
+    author = {Emin Gabrielyan},
+    title = {Erasure resilient MDS code with four redundant packets},
+    url = {https://docs.switzernet.com/people/emin-gabrielyan/051103-erasure-9-5-resilient/},
+    note = {Accessed: 2020-11-26},
+    year = 2005,
+}
+
+
+
 @article{carter-wegman-79,
     title = "Universal classes of hash functions",
     journal = "Journal of Computer and System Sciences",
